Mon Jul 23 12:12:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Exclusive_TMS.h:
          Removed commented out code

        * tao/GIOP_Message_Base.cpp:
          Layout changes

        * tao/GIOP_Message_Generator_Parser_10.h:
        * tao/GIOP_Message_Generator_Parser_12.h:
          Reduced number of forward declarations

Mon Jul 23 11:58:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
          Const change

        * tao/Reply_Dispatcher.h:
          Reduced number of forward declarations

Mon Jul 23 11:36:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.{h,cpp}:
          Removed parse_incoming_messages method and message_state_ member,
          both are not used at all

        * tao/GIOP_Message_State.{h,inl}:
          Removed reset method, it is not used anymore

Mon Jul 23 11:18:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_State.{h,cpp,inl}:
          Removed friend with GIOP_Message_Base and provided inline
          accessor methods. Removed missing_data_ member, it was not
          used at all

        * tao/GIOP_Message_Base.cpp:
          Use accessor methods of GIOP_Message_State because we are
          not a friend anymore

Mon Jul 23 09:02:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
        * tao/GIOP_Message_Generator_Parser_12.cpp:
        * tao/On_Demand_Fragmentation_Strategy.cpp:
          get_version doesn't have a return value anymore

Mon Jul 23 05:32:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Security/SL2_SecurityManager.cpp:
          Commented out non reachable code to resolve warnings
          on OpenVMS

Sun Jul 22 13:06:14 UTC 2007  Martin Corino <mcorino@remedy.nl>

        * tests/ORB_Local_Config/Two_DLL_ORB/Two_DLL_ORB.mpc:
          Added small verbatim section to make this test build on OpenVMS.
