@@ -93,9 +93,6 @@ public:
 protected:
   /// Cache the transport reference.
   TAO_Transport *transport_;
-
-  /// Lock to protect the state of the object
-  ACE_Lock *lock_;
 };
 
 TAO_END_VERSIONED_NAMESPACE_DECL
